// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header should match snapshot with signature confirmation 1`] = `
<div>
  <div
    class="mm-box confirm_header__wrapper mm-box--display-flex mm-box--justify-content-space-between mm-box--align-items-center"
  >
    <div
      class="mm-box mm-box--padding-4 mm-box--display-flex mm-box--align-items-flex-start"
    >
      <div
        class="mm-box mm-box--margin-top-2 mm-box--display-flex"
      >
        <div
          class=""
        >
          <div
            class="identicon"
            style="height: 32px; width: 32px; border-radius: 16px;"
          >
            <div
              style="border-radius: 50px; overflow: hidden; padding: 0px; margin: 0px; width: 32px; height: 32px; display: inline-block; background: rgb(3, 73, 94);"
            >
              <svg
                height="32"
                width="32"
                x="0"
                y="0"
              >
                <rect
                  fill="#FB184D"
                  height="32"
                  transform="translate(-0.010232866814926739 -2.467961361206475) rotate(274.3 16 16)"
                  width="32"
                  x="0"
                  y="0"
                />
                <rect
                  fill="#1888F2"
                  height="32"
                  transform="translate(0.7019171336752298 13.759175028660584) rotate(203.5 16 16)"
                  width="32"
                  x="0"
                  y="0"
                />
                <rect
                  fill="#FA8900"
                  height="32"
                  transform="translate(28.820219003567207 11.830135279564011) rotate(192.7 16 16)"
                  width="32"
                  x="0"
                  y="0"
                />
              </svg>
            </div>
          </div>
        </div>
        <div
          class="mm-box mm-text mm-avatar-base mm-avatar-base--size-xs mm-avatar-network confirm_header__avatar-network mm-text--body-xs mm-text--text-transform-uppercase mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-text-default mm-box--background-color-background-alternative mm-box--rounded-full mm-box--border-color-transparent box--border-style-solid box--border-width-1"
        >
          C
        </div>
      </div>
      <div
        class="mm-box mm-box--margin-inline-start-4"
      >
        <p
          class="mm-box mm-text mm-text--body-md-medium mm-box--color-text-default"
        />
        <p
          class="mm-box mm-text mm-text--body-md mm-box--color-text-alternative"
        >
          Chain 5
        </p>
      </div>
    </div>
    <div
      class="mm-box mm-box--padding-4 mm-box--display-flex mm-box--align-items-flex-end"
    >
      <div
        class="mm-box mm-box--display-flex mm-box--justify-content-flex-end"
        style="align-self: flex-end;"
      >
        <div>
          <div
            aria-describedby="tippy-tooltip-1"
            class=""
            data-original-title="Account details"
            data-tooltipped=""
            style="display: inline;"
            tabindex="0"
          >
            <button
              aria-label="Account details"
              class="mm-box mm-button-icon mm-button-icon--size-md mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-icon-default mm-box--background-color-transparent mm-box--rounded-lg"
              data-testid="header-info-button"
            >
              <span
                class="mm-box mm-icon mm-icon--size-md mm-box--display-inline-block mm-box--color-inherit"
                style="mask-image: url('./images/icons/info.svg');"
              />
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Header should match snapshot with transaction confirmation 1`] = `
<div>
  <div
    class="mm-box confirm_header__wrapper mm-box--display-flex mm-box--justify-content-space-between mm-box--align-items-center"
  >
    <div
      class="mm-box mm-box--padding-4 mm-box--display-flex mm-box--align-items-flex-start"
    >
      <div
        class="mm-box mm-box--margin-top-2 mm-box--display-flex"
      >
        <div
          class=""
        >
          <div
            class="identicon"
            style="height: 32px; width: 32px; border-radius: 16px;"
          >
            <div
              style="border-radius: 50px; overflow: hidden; padding: 0px; margin: 0px; width: 32px; height: 32px; display: inline-block; background: rgb(250, 58, 0);"
            >
              <svg
                height="32"
                width="32"
                x="0"
                y="0"
              >
                <rect
                  fill="#18CDF2"
                  height="32"
                  transform="translate(-1.04839350379394 -3.3042840694604987) rotate(328.9 16 16)"
                  width="32"
                  x="0"
                  y="0"
                />
                <rect
                  fill="#035E56"
                  height="32"
                  transform="translate(-18.298461708832043 10.5924618717486) rotate(176.2 16 16)"
                  width="32"
                  x="0"
                  y="0"
                />
                <rect
                  fill="#F26602"
                  height="32"
                  transform="translate(16.667842018223922 -14.205139722997082) rotate(468.9 16 16)"
                  width="32"
                  x="0"
                  y="0"
                />
              </svg>
            </div>
          </div>
        </div>
        <div
          class="mm-box mm-text mm-avatar-base mm-avatar-base--size-xs mm-avatar-network confirm_header__avatar-network mm-text--body-xs mm-text--text-transform-uppercase mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-text-default mm-box--background-color-background-alternative mm-box--rounded-full mm-box--border-color-transparent box--border-style-solid box--border-width-1"
        >
          ?
        </div>
      </div>
      <div
        class="mm-box mm-box--margin-inline-start-4"
      >
        <p
          class="mm-box mm-text mm-text--body-md-medium mm-box--color-text-default"
        >
          Test Account
        </p>
        <p
          class="mm-box mm-text mm-text--body-md mm-box--color-text-alternative"
        />
      </div>
    </div>
    <div
      class="mm-box mm-box--padding-4 mm-box--display-flex mm-box--align-items-flex-end"
    >
      <div
        class="mm-box mm-box--display-flex mm-box--justify-content-flex-end"
        style="align-self: flex-end;"
      >
        <div>
          <div
            aria-describedby="tippy-tooltip-2"
            class=""
            data-original-title="Account details"
            data-tooltipped=""
            style="display: inline;"
            tabindex="0"
          >
            <button
              aria-label="Account details"
              class="mm-box mm-button-icon mm-button-icon--size-md mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-icon-default mm-box--background-color-transparent mm-box--rounded-lg"
              data-testid="header-info-button"
            >
              <span
                class="mm-box mm-icon mm-icon--size-md mm-box--display-inline-block mm-box--color-inherit"
                style="mask-image: url('./images/icons/info.svg');"
              />
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
